--- a/app.css
+++ b/app.css
@@ -1,10 +1,12 @@
+body {
+  background-color: #0b0d10;
+}
 
+.navbar-brand b {
+  color: #e50914;
+}
 
-
-
-
-
-hero {
+.hero {
   min-height: 55vh;
   background-size: cover;
   display: flex;
@@ -67,5 +69,4 @@ hero {
 ::-webkit-scrollbar-thumb {
   background-color: #333;
   border-radius: 4px;
-  back
 }
